--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,23 @@
 .error{
     border: 2px solid red;
 }
+
+// .input-group{
+//     display: block;
+// }
+.container{
+    background-color: lightgrey;
+    border-radius: 15px;
+}
+
+.row button{
+    width: 100%;
+}
+.calculator-fond{
+    margin: 20px;
+}
+.calculator{
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 20px;
+}
